...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_arrow_right"
...
            android:textColor="@color/colorAccent"
            android:onClick="@{view -> listener.onIngredientesSelected()}"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_list_item"
            app:layout_constraintEnd_toEndOf="@+id/recipe_list_item" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorIngredientAcquired"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
