...
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_recipe_name"
            android:textColor="@color/colorAccent"
            style="@style/label"
            app:layout_constraintBottom_toTopOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
